<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/whatshotimagehome"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/whatshotimagehome"
        android:onClick=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cloudopshomelogo"
        app:srcCompat="@drawable/whatshotblack" />

    <ImageView
        android:id="@+id/cloudopshomelogo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cloud_ops_home_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloudopslogo" />

    <ImageView
        android:id="@+id/xopslogo"
        android:layout_width="55dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/xops_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/xops120x120" />

    <TextView
        android:id="@+id/whatshot_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/whatshot"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/whatshotimagehome"
        app:layout_constraintTop_toBottomOf="@+id/cloudopshomelogo" />

    <ImageView
        android:id="@+id/operate360"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/operate360"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cloudavailability"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/operate360" />

    <ImageView
        android:id="@+id/cloudavailability"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/cloudavailability_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/leadersconnect_Image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/operate360"
        app:srcCompat="@drawable/availability2" />

    <ImageView
        android:id="@+id/executive_watchlist"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/executive_watchlist_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/leadersconnect_Image"
        app:srcCompat="@drawable/executive_watchlist" />

    <ImageView
        android:id="@+id/leadersconnect_Image"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/leadersconnect_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/executive_watchlist"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cloudavailability"
        app:srcCompat="@drawable/leaders_connect" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>